Fix movieCard icon alignment

--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -23,5 +23,9 @@
   height: 40px;
   margin-right: 30px;
   width: 120px
+}
 
+.welcome-user {
+  color: #76E1EF;
+  margin-right: 40px;
 }
